# conic-complex

./: .gitignore  README.md  pyproject.toml
src/ccomplex/: display.py  free_twopac.py  parser_scc2020.py  projbar.py
tests/: ex_pb_fb.py  gen_circle.ipynb  gen_torus.ipynb  testfile_gen_scc.py  testfile_halfcircle.py  testfile_pb.py  tests_display.py  tests_display_serial.py
tests/tests/: results.csv
tests/tests/circle/: circle_H0.scc2020  circle_H1.scc2020
tests/tests/octogone/: octogone_H0.scc2020  octogone_H1.scc2020
tests/tests/scc2020/: test_parser.py  test_scc2020.txt
tests/tests/torus/: torus_H0.scc2020  torus_H1.scc2020  torus_H2.scc2020
