[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccomplex"
dependencies = [
    "numpy",
    "matplotlib",
    "tqdm"
]
version = "0.0.1"
authors = [
  { name="Alex Fernandes", email="alex.frnds.bo@gmail.com" },
]
description = "Computes the gamma-linear projected barcode of conic complex with (potentially) the use of the projected barcode template."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/alexfrnds/conic-complex"
Issues = "https://github.com/alexfrnds/conic-complex/issues"